--- a/src/Component/ContentMain/ContentMain.css
+++ b/src/Component/ContentMain/ContentMain.css
@@ -9,3 +9,19 @@
     max-width: 1200px;
     margin-left:28px;
 }
+@media screen and (max-width: 800px) {
+    .grid-content {
+        gap: 16px; 
+        
+    }
+}
+@media screen and (max-width: 500px) {
+    .grid-content{
+        display:grid;
+        grid-template-columns :1fr;
+        width:80%;
+        gap: 12px; 
+        margin-left:80px;
+    }
+
+}
