--- a/src/Component/Task/Task.css
+++ b/src/Component/Task/Task.css
@@ -30,8 +30,85 @@
     justify-content:center;
     display:flex;   
 }
-.bttn-icons{
-    width:20px;
-    height:20px;
-    margin-left:8px;
+    .bttn-icons{
+        width:20px;
+        height:20px;
+        margin-left:8px;
+    }
+@media screen and (max-width: 900px){
+    .Task{
+        padding: 32px;
+    }
+    .task-name{
+        font-size:18px;
+        color:#3D3D3D;
+    }
+    .btn-icons{
+        width:18px;
+        height:18px;
+    }
+    .icons button{
+        width:140px;
+        height: 40px;
+    }
+    .bttn-icons{
+        width:18px;
+        height:18px;
+        margin-left:8px;
+    }
+}
+@media screen and (max-width:650px){
+    .Task{
+        padding: 20px;
+    }
+    .task-name{
+        font-size:14px;
+        color:#3D3D3D;
+    }
+    .btn-icons{
+        width:14px;
+        height:14px;
+    }
+    .icons button{
+        width:100px;
+        height: 30px;
+    }
+    .bttn-icons{
+        width:14px;
+        height:14px;
+        margin-left:6px;
+}
+    span{
+        font-size:12px;
+    }
+}
+@media screen and (max-width: 500px) {
+    .Task{
+        padding: 16px;
+    }
+    .task-name{
+        font-size:12px;
+        color:#3D3D3D;
+    }
+    .btn-icons{
+        width:12px;
+        height:12px;
+    }
+    .icons button{
+        width:80px;
+        height: 20px;
+    }
+    .bttn-icons{
+        width:12px;
+        height:12px;
+        margin-left:6px;
+    }
+    span{
+        font-size:9px;
+    }
+}
+@media screen and (max-width: 500px) {
+    .Task{
+        margin-left:80px;
+    }
 }
