--- a/src/Layout/Sidebar/Sidebar.css
+++ b/src/Layout/Sidebar/Sidebar.css
@@ -97,3 +97,115 @@
       font-size:16px;
     }
   }
+
+  @media screen and (max-width: 900px) {
+    .sidebar {
+      padding: 20px 12px;
+      width: 130px;
+    }
+    .userinfo h4{
+      font-size:16px;
+    }
+    .Logout_side{
+      margin-top:680px;
+    }
+    .nav_list button,.nav5-button {
+      width: 120px;
+      height:38px;
+      padding: 14px 15px;
+      font-size: 12px;
+    }
+    .nav-icon {
+      margin-right: 10px;
+      margin-left:10px;
+      width:16px;
+      height:16px;
+    }
+    .userinfo {
+      display:flex;
+      flex-direction:column;
+      align-items: center;
+      justify-content:center;
+      margin-bottom: 40px;
+    }
+    
+    
+  }
+  @media screen and (max-width: 800px) {
+    .Logout_side{
+      margin-top:320px;
+    }
+    .sidebar {
+      padding: 20px 14px;
+      width: 100px;
+    } 
+  .nav_list button,.nav5-button {
+    width: 60px;
+    height:38px;
+    padding: 14px 15px;
+    font-size: 12px;
+  }
+  .nav-icon {
+    margin-left:8px;
+    width:15px;
+    height:15px;
+  }
+  .nav span{
+    display:none;
+  }
+  .userinfo {
+    display:flex;
+    flex-direction:column;
+    align-items: center;
+    justify-content:center;
+    margin-bottom: 40px;
+  }
+  
+  .user_icon {
+    font-size: 24px;
+    margin-right: 10px;
+    align-items:center;
+    justify-content:center;
+    color:#2563DC;
+  }
+  
+  .userinfo h4 {
+    font-size: 13px;
+    font-weight: bold;
+  }
+}
+  @media screen and (max-width: 500px) {
+    .Logout_side{
+      margin-top:320px;
+      
+    }
+    .sidebar {
+      padding: 18px 12px;
+      width: 70px;
+      position:fixed;
+    } 
+  .nav_list button,.nav5-button {
+    width: 50px;
+    height:38px;
+    padding: 10px 12px;
+    font-size: 12px;
+  }
+  .nav-icon {
+    margin-left:8px;
+    width:10px;
+    height:10px;
+  }
+  
+  .user_icon {
+    font-size: 12px;
+    margin-right: 8px;
+  }
+  
+  .userinfo h4 {
+    font-size: 10px;
+  }
+  .nav_list li, .Logout_side li {
+    margin: 10px 0;
+  }
+  }
+  
