--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ button {
   background:none;
 }
 .img-fit-cover img {
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  min-height: 100%;
   object-fit: cover;
 }
