--- a/src/Component/ContentMain/ContentMain.css
+++ b/src/Component/ContentMain/ContentMain.css
@@ -11,17 +11,16 @@
 }
 @media screen and (max-width: 800px) {
     .grid-content {
-        gap: 16px; 
-        
+       grid-template-columns:repeat(1, 1fr);
+       margin-left: 20px;
+       gap:16px;
     }
 }
 @media screen and (max-width: 500px) {
     .grid-content{
-        display:grid;
         grid-template-columns :1fr;
-        width:80%;
         gap: 12px; 
-        margin-left:80px;
+        margin-left:10px;
     }
 
 }
