--- a/src/Component/ContentTop/ContentTop.css
+++ b/src/Component/ContentTop/ContentTop.css
@@ -23,8 +23,7 @@
     position:absolute;
     transform: translateY(-50%);
     right: 0;
-    width: 20px;
-    height:20px;
+    min-height:20px;
     top: 50%;
     margin-right:30px;
 }
@@ -59,8 +58,8 @@
     width:8px;
     height:8px;
     border-radius:50px;
-    margin-top:-24px;
-    margin-right:88px;
+    margin-top:-26px;
+    margin-right:90px;
     right:0;
 }
 @media screen and (max-width:1200px){
@@ -83,59 +82,53 @@
         border-radius:50px;
         margin-top:-26px;
         margin-right:86px;
-        right:0;
+        right:2;
     }
+    
+   
 }
 
-@media screen and (max-width:900px){
+@media screen and (max-width:800px){
     .main-content-top{
-        margin-bottom: 6px;
-        padding:20px 26px 14px 26px;
+        padding:20px;
     }
     .notification-btn-dot{
         width:8px;
         height:8px;
         border-radius:50px;
         margin-top:-26px;
-        margin-right:86px;
+        margin-right:68px;
         right:0;
     }
-}
-@media screen and (max-width:800px){
-    .main-content-top{
-        margin-bottom: 5px;
-        padding:18px 24px 12px 24px;
+    .main-content-top input{
+        width:300px;
+        padding:16px;
     }
-    .notification-btn-dot{
-        border-radius:50px;
-        margin-top:-25px;
-        margin-right:78px;
-        right:0;
-    }
-    .content-top-left input{
-        width:400px;
-        padding:18px;
-    }
-    .content-top-left .icons{
-        width: 16px;
-        height:16px;
-        top: 45%;
-        margin-right:20px;
+    .content-top-btns{
+        marginn-left:0;
+        margin-top:12px;
+        justify-content:space-between;
     }
     .profile img{
-        height:40px;
-        width:40px;
+        height:36px;
+        width:36px;
+        border-radius:100%;
     }
     .content-icons{
-        height:20px;
-        width:20px;
+        height:18px;
+        width:18px;
     }
+
 }
 @media screen and (max-width:650px){
     .main-content-top{
         margin-bottom: 3px;
         padding:8px 6px 4px 6px;
         justify-content:space-around;
+    }
+    .notification-btn-dot{
+        display:none;
+    }
        
     .content-top-left input{
         width:200px;
@@ -155,25 +148,26 @@
 }
 @media screen and (max-width: 500px) {
     .main-content-top{
-        margin-bottom: 3px;
-        padding:4px 4px 4px 4px;
-        justify-content:space-around;
-        margin-left:80px;
+        padding:16px;
+        margin-bottom: 18px;
     }
-    }
+
     .content-top-left input{
-        width:160px;
+        width:100%;
         padding:12px;
         font-size:12px;
+    }
+    .content-top-btns{
+        flex-direction:column;
+        align-item:flex-start;
+        width:100%;
+        gap:8px;
     }
     .profile img{
         height:30px;
         width:30px;
         border-radius:100%;
-    }  
-    .notification-btn-dot{
-        display:none;
-    }
+    }   
     .content-icons{
         height:16px;
         width:16px;
