--- a/src/Component/Task/Task.css
+++ b/src/Component/Task/Task.css
@@ -4,6 +4,7 @@
     padding: 36px;
     justify-content:space-between;
     font-family: "Poppins", sans-serif;
+    flex-wrap:wrap
 }
 .task-name{
     font-size:22px;
@@ -35,7 +36,7 @@
         height:20px;
         margin-left:8px;
     }
-@media screen and (max-width: 900px){
+@media screen and (max-width: 800px){
     .Task{
         padding: 32px;
     }
@@ -57,31 +58,7 @@
         margin-left:8px;
     }
 }
-@media screen and (max-width:650px){
-    .Task{
-        padding: 20px;
-    }
-    .task-name{
-        font-size:14px;
-        color:#3D3D3D;
-    }
-    .btn-icons{
-        width:14px;
-        height:14px;
-    }
-    .icons button{
-        width:100px;
-        height: 30px;
-    }
-    .bttn-icons{
-        width:14px;
-        height:14px;
-        margin-left:6px;
-}
-    span{
-        font-size:12px;
-    }
-}
+
 @media screen and (max-width: 500px) {
     .Task{
         padding: 16px;
@@ -105,10 +82,5 @@
     }
     span{
         font-size:9px;
-    }
-}
-@media screen and (max-width: 500px) {
-    .Task{
-        margin-left:80px;
     }
 }
